# cachi2

./: Makefile  necessary-changes.txt  pyproject.toml  requirements-build-part2.in  requirements-build-part2.txt  requirements-build.in  requirements-build.txt  requirements-extras.txt  requirements.txt
cachi2/core/: async_download.py  config.py
cachi2/core/models/: input.py  output.py
cachi2/core/package_managers/: downloader_interface.py  gomod.py  pip.py
cachi2/interface/: cli.py
tests/unit/data/pip-local-index/simple/: index.html
tests/unit/data/pip-local-index/simple/attrs/: index.html
tests/unit/data/pip-local-index/simple/backoff/: index.html
tests/unit/data/pip-local-index/simple/charset-normalizer/: index.html
tests/unit/data/pip-local-index/simple/cython/: index.html
tests/unit/data/pip-local-index/simple/dockerfile-parse/: index.html
tests/unit/data/pip-local-index/simple/flit-core/: index.html
tests/unit/data/pip-local-index/simple/poetry-core/: index.html
tests/unit/data/pip-local-index/simple/pynacl/: index.html
tests/unit/data/pip-local-index/simple/pyyaml/: index.html
tests/unit/data/pip-local-index/simple/ruamel-yaml/: index.html
tests/unit/data/pip-local-index/simple/ruamel-yaml-clib/: index.html
tests/unit/data/pip-local-index/simple/setuptools/: index.html
tests/unit/data/pip-local-index/simple/urllib3/: index.html
tests/unit/package_managers/: test_pip.py
