[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cachi2"
version = "0.1.0"
license = {text = "GPLv3+"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.9"
dependencies = [
    "backoff",
    "beautifulsoup4",
    "gitpython",
    "packaging",
    "pydantic",
    "pyyaml",
    "requests",
    "semver",
    "setuptools",
    "typer",
]

[project.scripts]
cachi2 = "cachi2.interface.cli:app"

[tool.setuptools.packages.find]
include = ["cachi2", "cachi2.*"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["semver"]
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
